# pzor_optimula_rust

./: Cargo.toml
src/: lib.rs  registry_constants.rs  registry_factories.rs  registry_providers.rs  service.rs
src/registry_constants/: articles_code.rs  concepts_code.rs
src/registry_factories/: articles_factory.rs  concepts_factory.rs
