[package]
name = "pzor-optimula"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.16"
rust_decimal_macros = "1.16"
queues = "1.0.2"
chrono = "0.4"
legalios = "0.22.2"
procezor = "0.22.5"